--- a/src/basic/_variables.scss
+++ b/src/basic/_variables.scss
@@ -1,4 +1,8 @@
 
+$color-red: #E53935;
+$color-green: #43A047;
+$color-blue: #1E88E5;
+
 $input-border-color: #cfcfcf;
 $input-font-size: 14px;
 $input-padding: 0.4em 0.6em;
