--- a/demo/demo.scss
+++ b/demo/demo.scss
@@ -22,6 +22,8 @@ pre {
     font-family: monospace;
     padding: 8px;
     border-radius: 4px;
+    white-space: wrap;
+    white-space: pre-wrap;
 }
 
 hr {
@@ -30,6 +32,7 @@ hr {
 }
 
 .row {
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
@@ -41,7 +44,7 @@ hr {
 }
 
 .row .demos {
-    flex: 1 auto;
+    flex: 1 0px;
 }
 
 .demo {
