--- a/src/basic/inputs/ArrayInput.scss
+++ b/src/basic/inputs/ArrayInput.scss
@@ -1,11 +1,15 @@
 @import './inputs';
 
 .rsf-array-input {
-    /*&__icon {
-        vertical-align: bottom;
-        width: 1.5em;
-        height: 1.5em;
-    }*/
+    &_multiple {
+        border-left: 2px solid $color-green;
+        padding-left: 8px;
+        margin-left: 2px;
+    }
+
+    &__items {
+        margin-bottom: 16px;
+    }
 
     &__row {
         display: flex;
