--- a/src/basic/inputs/_TextInput.scss
+++ b/src/basic/inputs/_TextInput.scss
@@ -4,12 +4,62 @@
     box-sizing: border-box;
     display: inline-block;
 
+    // &__input {
+    //     box-sizing: border-box;
+    //     width: 100%;
+    //     font-size: $input-font-size;
+    //     padding: $input-padding;
+    //     border: 1px solid $input-border-color;
+    //     border-radius: $input-border-radius;
+    // }
+
+
+
+    position: relative;
+    background: #ffffff;
+    // display: inline-block;
+
+    &__counter {
+        position: absolute;
+        top: 0.3em;
+        right: 0.3em;
+        font-size: 0.85em;
+        line-height: 1em;
+        // color: $color-dark-grey;
+
+        &_invalid {
+            color: $color-red;
+        }
+    }
+
     &__input {
+        // font-size: 11px;
+
         box-sizing: border-box;
         width: 100%;
         font-size: $input-font-size;
         padding: $input-padding;
         border: 1px solid $input-border-color;
         border-radius: $input-border-radius;
+
+        &_styled {
+            width: 100%;
+            // background: $input-background;
+            // border: $input-border;
+            border: 1px solid $input-border-color;
+            // border-radius: $input-border-radius;
+            border-radius: $input-border-radius;
+            padding: $input-padding;
+            transition: border 0.3s ease;
+        }
+
+        &_multiline {
+            resize: none;
+        }
+
+        &:focus {
+            outline: none;
+            border: 1px solid #a0c0ff;
+        }
     }
 }
