Stylesheet import bugfix

--- a/src/basic/styles.scss
+++ b/src/basic/styles.scss
@@ -2,6 +2,7 @@
 // @import '~font-awesome/css/Font-awesome.min.css';
 
 @import '../fields/LabelField.scss';
+@import '../fields/InputField.scss';
 @import './inputs/_TextInput.scss';
 @import './inputs/ArrayInput.scss';
 @import './inputs/BooleanInput.scss';
