Enum support, individual field validation

--- a/src/basic/styles.scss
+++ b/src/basic/styles.scss
@@ -3,10 +3,12 @@
 
 @import '../fields/LabelField.scss';
 @import '../fields/InputField.scss';
+@import '../fields/FieldDescription.scss';
+@import '../fields/FieldValidation.scss';
 @import './inputs/_TextInput.scss';
 @import './inputs/ArrayInput.scss';
 @import './inputs/BooleanInput.scss';
-@import './inputs/Dropdown.scss';
 @import './inputs/NumberInput.scss';
 @import './inputs/ObjectInput.scss';
 @import './inputs/StringInput.scss';
+@import './inputs/EnumInput.scss';
