--- a/src/fields/InputField.scss
+++ b/src/fields/InputField.scss
@@ -1,9 +1,9 @@
 .rsf-input-field {
     margin-top: 0.5em;
 
-    &__description {
+    /*&__description {
         display: block;
         font-size: 0.8em;
         color: #808080;
-    }
+    }*/
 }
