--- a/src/fields/LabelField.scss
+++ b/src/fields/LabelField.scss
@@ -6,9 +6,9 @@
         margin-top: 0.5em;
     }
 
-    &__description {
+    /*&__description {
         display: block;
         font-size: 0.8em;
         color: #808080;
-    }
+    }*/
 }
